--- a/peta.html
+++ b/peta.html
@@ -25,36 +25,55 @@
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
     .status{margin-top:8px;color:var(--muted);font-size:13px;text-align:left}
 
-    /* Legend */
-    .legend{
-      display:grid;
-      grid-template-columns: repeat(4, minmax(0,1fr));
-      gap:12px;
-      margin-top:12px;
-      padding:12px;
-      background:rgba(0,0,0,0.45);
-      border-radius:10px;
-      box-shadow:0 6px 18px rgba(0,0,0,0.45);
-      max-width:1200px;
-      margin-left:auto;
-      margin-right:auto;
-      grid-auto-rows:64px;
-      align-items:center;
-    }
-    .legend-item{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      padding:10px 14px;
-      background:rgba(255,255,255,0.03);
-      border-radius:10px;
-      font-size:14px;
-      color:#e6eef7;
-      min-width:220px;
-      min-height:56px;
-    }
-    .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
-    .legend-item span{display:block;text-align:left;line-height:1.2;word-break:break-word}
+  /* Legend grid */
+.legend {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* otomatis menyesuaikan */
+  gap: 20px; /* jarak antar kotak */
+  margin-top: 24px;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.45);
+  border-radius: 14px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.45);
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: stretch;
+}
+
+/* Kotak item legenda */
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  padding: 14px 18px;
+  background: rgba(255, 255, 255, 0.06);
+  border-radius: 12px;
+  font-size: 15px;
+  color: #e6eef7;
+  min-height: 72px;
+  box-sizing: border-box;
+  text-align: left;
+  transition: background 0.2s ease;
+}
+
+/* efek hover ringan */
+.legend-item:hover {
+  background: rgba(255, 255, 255, 0.12);
+}
+
+.legend-item img {
+  width: 36px;
+  height: 36px;
+  object-fit: contain;
+  filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.4));
+}
+
+.legend-item span {
+  display: block;
+  line-height: 1.3;
+  word-break: break-word;
+}
 
     @media(max-width:900px){
       .legend{grid-template-columns: repeat(2, minmax(0,1fr)); grid-auto-rows:auto}
