--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>MalukuInfraZone</title>
+<title>InfraCKMaluku</title>
 <link rel="icon" href="images/favicon.png">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
 <style>
@@ -270,7 +270,7 @@ nav{display:flex;align-items:center;gap:12px}
 </section>
 
 <footer style="text-align:center;padding:24px;color:var(--muted);background:var(--bg)">
-  &copy; 2025 MalukuInfraZone - BPBPK Maluku
+  &copy; 2025 InfraCKMaluku - BPBPK Maluku
 </footer>
 
 <script>
