--- a/peta.html
+++ b/peta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Peta Infrastruktur - MalukuInfraZone</title>
+  <title>Peta Infrastruktur - InfraCKMaluku</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -256,7 +256,7 @@
   <div class="wrap">
     <header>
       <div>
-        <div class="title">Peta Infrastruktur — MalukuInfraZone</div>
+        <div class="title">Peta Infrastruktur — InfraCKMaluku</div>
         <div style="font-size:13px;color:var(--muted)">BPBPK Maluku</div>
       </div>
       <div class="controls" aria-hidden="false">
@@ -296,7 +296,7 @@
   <footer class="site-footer" role="contentinfo">
     <div class="footer-inner">
       <div class="footer-brand">
-        <div class="logo">MalukuInfraZone</div>
+        <div class="logo">InfraCKMaluku</div>
         <div class="tag" style="color:var(--muted)">BPBPK Maluku</div>
         <div class="footer-note">Balai Penataan Bangunan, Prasarana dan Kawasan Maluku</div>
       </div>
@@ -446,7 +446,7 @@ function buildInfoHtml(p){
   const realAng = realAngRaw ? formatCurrency(realAngRaw) : '';
   const thOptimal = (thOptimalRaw && thOptimalRaw !== '-') ? thOptimalRaw : '';
 
-  // helper untuk baris label: nilai (nilai dibuat bold)
+ 
   function row(label, value){
     if(!value) return '';
     return '<div><span class="iw-label">' + escapeHtml(label) + ':</span> <strong class="iw-value">' + escapeHtml(value) + '</strong></div>';
