--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@ nav{display:flex;align-items:center;gap:12px}
 .cards-row{display:flex;justify-content:center;gap:22px;flex-wrap:wrap;margin-bottom:20px;}
 .card{background:linear-gradient(180deg,rgba(11,19,30,0.78),rgba(8,12,18,0.7));border-radius:12px;border:1px solid rgba(255,255,255,0.04);box-shadow:0 10px 30px rgba(4,26,54,0.35);overflow:hidden;width:320px;max-width:90%;transition:transform .2s;display:flex;flex-direction:column;}
 .card:hover{transform:translateY(-4px)}
-/* =====================
-   CARD HEAD DESIGN (ELEGANT)
-   ===================== */
 
 .card-head {
   background: var(--navy);
@@ -208,7 +205,7 @@ nav{display:flex;align-items:center;gap:12px}
 <header>
   <div class="brand">
     <img src="images/favicon.png" alt="logo">
-    <div class="site-title">MalukuInfraZone</div>
+    <div class="site-title">InfraCKMaluku</div>
   </div>
   <nav id="top-nav">
     <a href="#hero" class="nav-link" id="nav-home">Beranda</a>
